# NVIDIA___NeMo-Relay

./: .gitignore  .gitlab-ci.yml  ATTRIBUTIONS-Node.md  ATTRIBUTIONS-Python.md  ATTRIBUTIONS-Rust.md  Cargo.toml  README.md  RELEASING.md  codecov.yml  justfile  package-lock.json  pyproject.toml  rust-toolchain.toml
.github/: CODEOWNERS  ci-tool-versions.env  nightly-alpha-branches.yaml
.github/workflows/: ci.yaml  ci_check.yml  ci_docs.yml  ci_node.yml  ci_python.yml  ci_rust.yml
crates/adaptive/: README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: banner.rs  config.rs  doctor.rs  error.rs  gateway.rs  installer.rs  launcher.rs  lib.rs  main.rs  mcp_environment.rs  model.rs  plugins.rs  provider_auth.rs  server.rs  session.rs  setup.rs
crates/cli/src/adapters/: claude_code.rs  codex.rs  cursor.rs  mod.rs
crates/cli/src/agents/: mod.rs
crates/cli/src/agents/claude/: launch.rs
crates/cli/src/agents/codex/: launch.rs
crates/cli/src/agents/hermes/: config.rs
crates/cli/src/agents/shared/: alignment.rs
crates/cli/src/alignment/: codex.rs  mod.rs
crates/cli/src/configuration/: mod.rs  types.rs
crates/cli/src/events/: mod.rs
crates/cli/src/gateway/: mod.rs  request.rs  response.rs  routes.rs
crates/cli/src/plugins/: config_io.rs  dynamic_editor.rs  editor_model.rs  schema.rs
crates/cli/src/process/: launcher.rs  prepared.rs
crates/cli/src/server/: mod.rs
crates/cli/src/sessions/: mod.rs
crates/cli/tests/: architecture_tests.rs  cli_tests.rs  switchyard_process_e2e.rs
crates/cli/tests/coverage/: adapters_tests.rs  alignment_codex_tests.rs  alignment_tests.rs  config_tests.rs  doctor_tests.rs  gateway_tests.rs  installer_tests.rs  launcher_tests.rs  plugins_tests.rs  server_tests.rs  session_tests.rs  setup_tests.rs
crates/cli/tests/coverage/agents/: hermes_tests.rs  launcher_tests.rs
crates/cli/tests/coverage/commands/: main_tests.rs
crates/cli/tests/coverage/shared/: bootstrap_tests.rs  config_tests.rs  events_tests.rs  file_io_tests.rs  gateway_tests.rs  installer_tests.rs  mcp_tests.rs  server_tests.rs  session_tests.rs
crates/core/: Cargo.toml  README.md
crates/ffi/: Cargo.toml  README.md  nemo_relay.h
crates/node/: README.md  observability.d.ts  observability.js  package.json
crates/plugin/: README.md
crates/python/: README.md
crates/switchyard/: Cargo.toml  README.md
crates/switchyard/src/: component.rs  contract.rs  lib.rs  stream_translation.rs  translation.rs
crates/switchyard/tests/: contract.rs
crates/switchyard/tests/unit/: component_tests.rs
crates/types/: README.md
crates/wasm/: README.md
crates/worker/: README.md
crates/worker-proto/: README.md
docs/: index.md  index.yml
docs/about-nemo-relay/: architecture.mdx  ecosystem.mdx  overview.mdx
docs/build-plugins/: about.mdx  basic-guide.md  plugin-configuration-files.md
docs/configure-plugins/: about.mdx  discoverable-plugins.mdx  model-pricing.mdx  plugin-configuration-files.mdx
docs/contribute/: runtime-contract-docs.mdx
docs/export-observability-data/: observability-plugin.md
docs/getting-started/: agent-runtime-primer.mdx  configuration.mdx  installation.md  installation.mdx  prerequisites.mdx  rust.md
docs/instrument-applications/: adding-scopes-and-marks.mdx  instrument-llm-call.mdx  instrument-tool-call.mdx
docs/integrate-frameworks/: about.md  coding-agent-claude-code.md  coding-agent-codex.md  coding-agent-cursor.md  coding-agent-gateway.md  coding-agent-hermes.md  openclaw-plugin.md
docs/integrate-into-frameworks/: provider-response-codecs.mdx  wrap-tool-calls.mdx
docs/nemo-relay-cli/: about.mdx  basic-usage.mdx  claude-code.mdx  codex.mdx  hermes.mdx  plugin-installation.mdx
docs/observability-plugin/: configuration.mdx
docs/reference/: event-sanitizers.mdx  llm-request-intercept-outcomes.mdx  operational-logging.mdx  tool-execution-intercept-outcomes.mdx
docs/resources/: glossary.mdx  support-and-faqs.mdx
docs/supported-integrations/: about.mdx  deepagents.mdx  langchain.mdx  langgraph.mdx  openclaw-plugin.mdx
docs/use-adaptive-optimization/: configure.md
examples/switchyard/: README.md  e2e-common.sh  fake_upstream.py  hermes-ollama-plugins.toml  hermes-ollama-profiles.yaml  otel-collector.yaml  plugins.toml  real-e2e-plugins.toml  real-e2e-profiles.yaml  run-hermes-ollama-smoke.sh  run-real-e2e.sh
fern/: docs.yml
go/nemo_flow/: atof_test.go  (+1 more)
scripts/: test-install-mocks.sh  test-install.sh
skills/: README.md
(+260 files in other folders)
