# SPDX-FileCopyrightText: Copyright (c) 2026, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "nemo-relay-switchyard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "First-party Switchyard Decision API routing plugin for NeMo Relay."
readme = "README.md"

[lints]
workspace = true

[features]
default = []
schema = ["dep:schemars", "nemo-relay/schema"]

[dependencies]
nemo-relay.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
switchyard-translation.workspace = true
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", default-features = false, features = ["time"] }
uuid = { workspace = true, features = ["v7"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1", features = ["net", "rt", "macros", "sync", "test-util", "rt-multi-thread", "time"] }
